# buoy-model

./: .gitignore  LICENSE  README.md  bytetrack.yaml  calculate_angle_from_image.py  camera_calibration.py  convert_to_onnx.py  detect_test.py  detect_test_images.py  detect_tracking.py  detect_webcam.py  filter_classes.py  get_classes.py  image_preprocessing.py  pyproject.toml  release_note_template.md  requirements.txt  rgb.py  save_data.py  solo2yolo.py  test.py  tracking_test.py  train.py  train_annotated.py  upload.py
exp10-new/yolov8s-c3k2-6-m005-6/: args.yaml
exp10-new/yolov8s-c3k2-6-m005-62/: args.yaml
