[project]
name = "buoy-model"
version = "0.1.0"
description = "Buoy detection and tracking model"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ultralytics~=8.3.4",
    "torch~=2.4.1",
    "torchvision",
    "torchaudio",
    "numpy>=1.24.4,<2.0",
    "opencv-contrib-python~=4.10.0.84",
    "roboflow~=1.1.47",
    "pyyaml~=6.0.2",
    "tqdm~=4.66.5",
    "pillow~=10.4.0",
    "pyrealsense2~=2.55.1.6486",
    "lapx~=0.5.10",
    "urllib3==1.26.15",
    "onnx>=1.20.1",
    "onnxslim>=0.1.85",
    "onnxruntime>=1.24.2",
    "onnxruntime-gpu>=1.24.2",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py", "bytetrack.yaml"]
